# GAUSS

./: CMakeLists.txt
src/Base/: CMakeLists.txt
src/Base/include/: ConstraintFixedPoint.h  State.h
src/Collisions/: CMakeLists.txt
src/Core/: CMakeLists.txt
src/EigenFit/: CMakeLists.txt
src/Embeddings/: CMakeLists.txt
src/FEM/: CMakeLists.txt
src/FEM/include/: Element.h
src/Optimization/: CMakeLists.txt
src/ParticleSystem/: CMakeLists.txt
src/SolversLinear/: CMakeLists.txt
src/UI/: CMakeLists.txt  UISetup.txt
